@@ -57,7 +57,7 @@
       mData: "name"
     },
     {
-      sTitle: '{% translate "Certificate" %}',
+      sTitle: '{% translate "My certificate" %}',
       name: "subject", aTargets: [2],
       defaultContent: "",
       mData: "x509_certificate",
@@ -72,13 +72,13 @@
       mData: "protocols",
     },
     {
-      sTitle: '{% translate "Verify client" %}',
+      sTitle: '{% translate "Verify peer certificate" %}',
       name: "verify_client", aTargets: [4],
       defaultContent: "",
       mData: "verify_client",
     },
     {
-      sTitle: '{% translate "Client CA" %}',
+      sTitle: "{% translate "Peer's CA certificate" %}",
       name: "ca_cert", aTargets: [5],
       defaultContent: "",
       mData: "ca_cert",
